--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,7 @@
 /FotosMorfeoNogit/
 /NoGit/
 
-CatAttack-SublimeProject.sublime-workspace
+# Sublime Text #
+################
+*.sublime-workspace
+# keep any sublime-project files within version control
